# FastRAG

./: .gitignore  .pre-commit-config.yaml  Dockerfile_demo_ui  Dockerfile_parser_api  Dockerfile_parser_api_dev  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
fastrag/: api.py  demo_ui.py
fastrag/notebooks/: gradio_demo.ipynb  pdf_processor.ipynb  qdrant_sandbox.ipynb
fastrag/parser/llamaindex_readers/: fitz_pdf_reader.py
fastrag/parser/processor/: document_processor.py  pdf_document_processor.py
fastrag/rag/: retriever.py
fastrag/utilities/: qdrant_database.py  timing.py
logs/: chatbot_log.txt
notebooks/: output.md  pdf_processor.ipynb
