[tool.poetry]
name = "fastrag"
version = "0.1.0"
description = "A simple RAG application that is optimized to run fast on general grade PCs"
authors = ["Bibek K C <bibekyess@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
llama-index-llms-llama-cpp = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
